# FitsStorage

./: .gitignore  .gitlab-ci.yml  ApacheReturnCodes.py  CHANGES.rst  Cadc.py  CadcCRC.py  CadcWMD.py  Dockerfile  Dockerfile-archive  Dockerfile-archive-centos8  Dockerfile-archive-centos8-jenkins  Dockerfile-archive-debug  Dockerfile-centos8  Dockerfile-centos8-jenkins  Dockerfile-fitsstorageutils  Dockerfile-initdb  Dockerfile-jenkins  FitsStorage.py  FitsStorageCal.py  FitsStorageConfig.py  FitsStorageCuration.py  FitsStorageLogger.py  FitsStorageQAmetrics.py  FitsStorageTape.py  FitsStorageUtils.py  FitsStorageWebSummary.py  FitsVerify.py  GeminiMetadataUtils.py  Jenkinsfile  MANIFEST.in  MissingCalibrationEmail.py  README.md  STANDARD_FitsStorageConfig.py  TODO  TODO.txt  YouGotDataEmail.py  _apache.py  add_to_ingest_queue.py  apache_return_codes.py  apachehandler.py  (+75 more)
.jenkins/: conda_py3env_stable.yml
FitsStorageCal/: Calibration.py  CalibrationF2.py  CalibrationGMOS.py  CalibrationGNIRS.py  CalibrationMICHELLE.py  CalibrationNIFS.py  CalibrationNIRI.py  __init__.py
FitsStorageUtils/: CreateTables.py  GeometryHacks.py  GzipFileInfo.py  IngestStandards.py  ServiceIngestQueue.py  hashes.py
FitsStorageWebSummary/: CalMGR.py  Calibrations.py  CurationReport.py  FileServer.py  GMOSCal.py  Notification.py  ObservingStatistics.py  ProgsObserved.py  Selection.py  Standards.py  Summary.py  TapeStuff.py  UploadProcessedCal.py  XMLFileList.py  XMLTape.py
ansible/: add_to_ingest_queue.sh  ansible.cfg  archive_install.sh  archive_install_aws.sh  cpo  dev  dev-aws  dev-centos7  dev-cl  dev-qap  dev-scorpy-aws  dev-vm  mko  reset_ingest_queue_failures.sh  reset_preview_queue_failures.sh  tape  test
bespoke_housekeeping_scripts/: README.md  check_alopeke_zorro_wcs.py  compare_headers.py  convert_maroonx.py  data_rates.py  gmos_reducedbias_stability.py  ingest_uploaded_file.py  inotify_ingest_queue.py  purge_old_diskfiles.py  reference_xmlfilelist_client.py  (+6 more)
(+1540 files in other folders)
