[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'

[project]
name = "fits_storage"
version = "3.4.0a4"
authors = [
  { name="Paul Hirst", email="paul.hirst@noirlab.edu" },
]
description = "The Gemini Observatory Fits Storage System"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.gemini.edu"

[tool.setuptools]
packages = ['fits_storage',
    'fits_storage.config',
    'fits_storage.core', 'fits_storage.core.orm',
    'fits_storage.db', 'fits_storage.db.selection',
    'fits_storage.cal', 'fits_storage.cal.calibration', 'fits_storage.cal.orm',
    'fits_storage.fits_validator', 'fits_storage.gemini_metadata_utils',
    'fits_storage.queues', 'fits_storage.queues.orm',
    'fits_storage.queues.queue',
    'fits_storage.scripts',
    'fits_storage.server', 'fits_storage.server.orm',
    'fits_storage.server.wsgi', 'fits_storage.web',
    'fits_storage_tests', 'fits_storage_tests.code_tests']